bug: adds z-index to hero content.
The animation was passing above the hero content, which is not intended as its only for the background. Moves .first and .second to z-index:1.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -299,6 +299,9 @@ main,
     flex-direction: column;
   }
 }
+#hero .first, #hero .second {
+  z-index: 1;
+}
 
 #hero .content-wrapper::after {
   content: "";
